feat: added categories/tags/regions endpoint
