# internal/models/regions.go
@@ -1,0 +1,6 @@
+package models
+
+type RegionResponse struct {
+	Regions []string `json:"regions"`
+	Total   int      `json:"total"`
+}
