# internal/models/tags.go
@@ -1,0 +1,6 @@
+package models
+
+type TagResponse struct {
+	Tags  []string `json:"tags"`
+	Total int      `json:"total"`
+}
